fixed issues with exercise 2 and alignment

--- a/src/main.css
+++ b/src/main.css
@@ -18,6 +18,13 @@ ul
 	list-style: none;
 }
 
+h1
+{
+	font-size: 35px;
+	font-weight: bold;
+	text-align: center;
+}
+
 h2
 {
 	font-size: x-large;
@@ -51,17 +58,64 @@ h5
 	font-weight: normal;
 }
 
-a
+a, button
 {
 	margin: 5px;
 	border: none;
-	background-color: 	#CD5C5C;
+	background-color: #CD5C5C;
 	padding: 5px 7px;
 	box-shadow: 2px 2px 5px rosybrown;
 	border-radius: 5px;
+	text-decoration: none;
+	color: #1a1a1a;
+	font-size: 15px;
 }
 
-a:hover
+a:hover, button:hover
 {
 	background-color: #c33c3c;
+}
+
+img
+{
+	border: 5px solid #1a1a1a;
+	height: 500px;
+	width: 500px;
+	border-radius: 10px;
+}
+
+table
+{
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	text-align: center;
+}
+
+td
+{
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-bottom: 10px;
+}
+
+input
+{
+	display: inline-block;
+  	float: left;
+	border: 2px solid #1a1a1a;
+	border-radius: 4px;
+	margin-top: 10px;
+	margin-left: 5px;
+}
+
+label
+{
+	display: inline-block;
+    float: left;
+    clear: left;
+    width: 250px;
+	margin-top: 10px;
+    text-align: right;
+	font-weight: bold;
 }
